Refactor sendEmail function and add support for multiple SMTP auth methods (LOGIN, PLAIN, CRAM-MD5) and TLS verification option, fix syntax error in sendSMTPMessage function

--- a/internal/locales/de.json
+++ b/internal/locales/de.json
@@ -142,6 +142,16 @@
     "settings.smtp_host": "SMTP-Host",
     "settings.smtp_host_placeholder": "z.B. smtp.gmail.com",
     "settings.smtp_port": "SMTP-Port",
+    "settings.smtp_port_placeholder": "587",
+    "settings.smtp_port_hint": "Häufige Ports: 25 (unverschlüsselt), 587 (STARTTLS), 465 (SMTPS), 2525 (alternatives STARTTLS)",
+    "settings.smtp_auth_method": "Authentifizierungsmethode",
+    "settings.smtp_auth_method_auto": "Auto (LOGIN bevorzugt)",
+    "settings.smtp_auth_method_login": "LOGIN",
+    "settings.smtp_auth_method_plain": "PLAIN",
+    "settings.smtp_auth_method_cram_md5": "CRAM-MD5",
+    "settings.smtp_auth_method_hint": "LOGIN wird für Office365/Gmail empfohlen. PLAIN ist die Standard-SMTP-Authentifizierung. CRAM-MD5 ist challenge-response-basiert.",
+    "settings.smtp_insecure_skip_verify": "TLS-Zertifikatsüberprüfung überspringen",
+    "settings.smtp_insecure_skip_verify_warning": "⚠️ Nicht für Produktion empfohlen",
     "settings.smtp_username": "SMTP-Benutzername",
     "settings.smtp_username_placeholder": "z.B. user@example.com",
     "settings.smtp_password": "SMTP-Passwort",
@@ -150,6 +160,7 @@
     "settings.smtp_sender_placeholder": "noreply@swissmakers.ch",
     "settings.smtp_tls": "TLS verwenden (empfohlen)",
     "settings.send_test_email": "Test-E-Mail senden",
+    "settings.send_test_email_hint": "⚠️ Bitte speichern Sie zuerst Ihre SMTP-Einstellungen, bevor Sie eine Test-E-Mail senden.",
     "settings.fail2ban": "Globale Standard-Fail2Ban-Konfigurationen",
     "settings.fail2ban.description": "Diese Einstellungen werden auf allen aktivierten Fail2Ban-Servern angewendet und in deren jail.local [DEFAULT]-Abschnitt gespeichert.",
     "settings.enable_bantime_increment": "Bantime-Inkrement aktivieren",
