--- a/internal/locales/fr.json
+++ b/internal/locales/fr.json
@@ -142,6 +142,16 @@
   "settings.smtp_host": "Hôte SMTP",
   "settings.smtp_host_placeholder": "par exemple, smtp.gmail.com",
   "settings.smtp_port": "Port SMTP",
+  "settings.smtp_port_placeholder": "587",
+  "settings.smtp_port_hint": "Ports communs: 25 (non chiffré), 587 (STARTTLS), 465 (SMTPS), 2525 (STARTTLS alternatif)",
+  "settings.smtp_auth_method": "Méthode d'Authentification",
+  "settings.smtp_auth_method_auto": "Auto (LOGIN préféré)",
+  "settings.smtp_auth_method_login": "LOGIN",
+  "settings.smtp_auth_method_plain": "PLAIN",
+  "settings.smtp_auth_method_cram_md5": "CRAM-MD5",
+  "settings.smtp_auth_method_hint": "LOGIN est recommandé pour Office365/Gmail. PLAIN est l'authentification SMTP standard. CRAM-MD5 est basé sur challenge-response.",
+  "settings.smtp_insecure_skip_verify": "Ignorer la Vérification du Certificat TLS",
+  "settings.smtp_insecure_skip_verify_warning": "⚠️ Non recommandé pour la production",
   "settings.smtp_username": "Nom d'utilisateur SMTP",
   "settings.smtp_username_placeholder": "par exemple, utilisateur@example.com",
   "settings.smtp_password": "Mot de passe SMTP",
@@ -150,6 +160,7 @@
   "settings.smtp_sender_placeholder": "noreply@swissmakers.ch",
   "settings.smtp_tls": "Utiliser TLS (recommandé)",
   "settings.send_test_email": "Envoyer un email de test",
+  "settings.send_test_email_hint": "⚠️ Veuillez d'abord enregistrer vos paramètres SMTP avant d'envoyer un email de test.",
   "settings.fail2ban": "Configurations Globales par Défaut de Fail2Ban",
   "settings.fail2ban.description": "Ces paramètres seront appliqués à tous les serveurs Fail2Ban activés et stockés dans leur section [DEFAULT] de jail.local.",
   "settings.enable_bantime_increment": "Activer l'incrémentation du Bantime",
