--- a/internal/locales/it.json
+++ b/internal/locales/it.json
@@ -142,6 +142,16 @@
   "settings.smtp_host": "Host SMTP",
   "settings.smtp_host_placeholder": "es. smtp.gmail.com",
   "settings.smtp_port": "Porta SMTP",
+  "settings.smtp_port_placeholder": "587",
+  "settings.smtp_port_hint": "Porte comuni: 25 (non crittografato), 587 (STARTTLS), 465 (SMTPS), 2525 (STARTTLS alternativo)",
+  "settings.smtp_auth_method": "Metodo di Autenticazione",
+  "settings.smtp_auth_method_auto": "Auto (LOGIN preferito)",
+  "settings.smtp_auth_method_login": "LOGIN",
+  "settings.smtp_auth_method_plain": "PLAIN",
+  "settings.smtp_auth_method_cram_md5": "CRAM-MD5",
+  "settings.smtp_auth_method_hint": "LOGIN è raccomandato per Office365/Gmail. PLAIN è l'autenticazione SMTP standard. CRAM-MD5 è basato su challenge-response.",
+  "settings.smtp_insecure_skip_verify": "Ignora Verifica Certificato TLS",
+  "settings.smtp_insecure_skip_verify_warning": "⚠️ Non raccomandato per la produzione",
   "settings.smtp_username": "Nome utente SMTP",
   "settings.smtp_username_placeholder": "es. utente@example.com",
   "settings.smtp_password": "Password SMTP",
@@ -150,6 +160,7 @@
   "settings.smtp_sender_placeholder": "noreply@swissmakers.ch",
   "settings.smtp_tls": "Usa TLS (raccomandato)",
   "settings.send_test_email": "Invia email di test",
+  "settings.send_test_email_hint": "⚠️ Si prega di salvare prima le impostazioni SMTP prima di inviare un'email di test.",
   "settings.fail2ban": "Configurazioni Globali Predefinite di Fail2Ban",
   "settings.fail2ban.description": "Queste impostazioni verranno applicate a tutti i server Fail2Ban abilitati e memorizzate nella loro sezione [DEFAULT] di jail.local.",
   "settings.enable_bantime_increment": "Abilita incremento del Bantime",
