--- a/internal/locales/de_ch.json
+++ b/internal/locales/de_ch.json
@@ -142,6 +142,16 @@
     "settings.smtp_host": "SMTP-Host",
     "settings.smtp_host_placeholder": "z.B. smtp.gmail.com",
     "settings.smtp_port": "SMTP-Port",
+    "settings.smtp_port_placeholder": "587",
+    "settings.smtp_port_hint": "Hüfigi Ports: 25 (unverschlüsselt), 587 (STARTTLS), 465 (SMTPS), 2525 (alternativs STARTTLS)",
+    "settings.smtp_auth_method": "Authentifizierungsmethode",
+    "settings.smtp_auth_method_auto": "Auto (LOGIN bevorzugt)",
+    "settings.smtp_auth_method_login": "LOGIN",
+    "settings.smtp_auth_method_plain": "PLAIN",
+    "settings.smtp_auth_method_cram_md5": "CRAM-MD5",
+    "settings.smtp_auth_method_hint": "LOGIN wird für Office365/Gmail empfohle. PLAIN isch d Standard-SMTP-Authentifizierung. CRAM-MD5 isch challenge-response-basiert.",
+    "settings.smtp_insecure_skip_verify": "TLS-Zertifikatsüberprüfig überspringe",
+    "settings.smtp_insecure_skip_verify_warning": "⚠️ Nid fürd Produktion empfohle",
     "settings.smtp_username": "SMTP-Benutzername",
     "settings.smtp_username_placeholder": "z.B. user@example.com",
     "settings.smtp_password": "SMTP-Passwort",
@@ -150,6 +160,7 @@
     "settings.smtp_sender_placeholder": "noreply@swissmakers.ch",
     "settings.smtp_tls": "TLS bruuche (empfohlen)",
     "settings.send_test_email": "Test-Email schicke",
+    "settings.send_test_email_hint": "⚠️ Bitte speichere zersch dini SMTP-Iistellige, bevor du e Test-Email schicksch.",
     "settings.fail2ban": "Globale Standard-Fail2Ban-Konfiguratione",
     "settings.fail2ban.description": "Die Einstellige werde uf alli aktivierte Fail2Ban-Server aagwändet und i däre jail.local [DEFAULT]-Abschnitt gspeicheret.",
     "settings.enable_bantime_increment": "Bantime-Inkrement aktivierä",
