--- a/internal/locales/en.json
+++ b/internal/locales/en.json
@@ -142,6 +142,16 @@
     "settings.smtp_host": "SMTP Host",
     "settings.smtp_host_placeholder": "e.g., smtp.gmail.com",
     "settings.smtp_port": "SMTP Port",
+    "settings.smtp_port_placeholder": "587",
+    "settings.smtp_port_hint": "Common ports: 25 (plain), 587 (STARTTLS), 465 (SMTPS), 2525 (alternative STARTTLS)",
+    "settings.smtp_auth_method": "Authentication Method",
+    "settings.smtp_auth_method_auto": "Auto (LOGIN preferred)",
+    "settings.smtp_auth_method_login": "LOGIN",
+    "settings.smtp_auth_method_plain": "PLAIN",
+    "settings.smtp_auth_method_cram_md5": "CRAM-MD5",
+    "settings.smtp_auth_method_hint": "LOGIN is recommended for Office365/Gmail. PLAIN is standard SMTP auth. CRAM-MD5 is challenge-response based.",
+    "settings.smtp_insecure_skip_verify": "Skip TLS Certificate Verification",
+    "settings.smtp_insecure_skip_verify_warning": "⚠️ Not recommended for production",
     "settings.smtp_username": "SMTP Username",
     "settings.smtp_username_placeholder": "e.g., user@example.com",
     "settings.smtp_password": "SMTP Password",
@@ -150,6 +160,7 @@
     "settings.smtp_sender_placeholder": "noreply@swissmakers.ch",
     "settings.smtp_tls": "Use TLS (Recommended)",
     "settings.send_test_email": "Send Test Email",
+    "settings.send_test_email_hint": "⚠️ Please save your SMTP settings first before sending a test email.",
     "settings.fail2ban": "Global Default Fail2Ban Configurations",
     "settings.fail2ban.description": "These settings will be applied to all enabled Fail2Ban servers and stored in their jail.local [DEFAULT] section.",
     "settings.enable_bantime_increment": "Enable Bantime Increment",
