--- a/internal/locales/es.json
+++ b/internal/locales/es.json
@@ -142,6 +142,16 @@
   "settings.smtp_host": "Host SMTP",
   "settings.smtp_host_placeholder": "p.ej., smtp.gmail.com",
   "settings.smtp_port": "Puerto SMTP",
+  "settings.smtp_port_placeholder": "587",
+  "settings.smtp_port_hint": "Puertos comunes: 25 (sin cifrar), 587 (STARTTLS), 465 (SMTPS), 2525 (STARTTLS alternativo)",
+  "settings.smtp_auth_method": "Método de Autenticación",
+  "settings.smtp_auth_method_auto": "Auto (LOGIN preferido)",
+  "settings.smtp_auth_method_login": "LOGIN",
+  "settings.smtp_auth_method_plain": "PLAIN",
+  "settings.smtp_auth_method_cram_md5": "CRAM-MD5",
+  "settings.smtp_auth_method_hint": "LOGIN se recomienda para Office365/Gmail. PLAIN es la autenticación SMTP estándar. CRAM-MD5 está basado en challenge-response.",
+  "settings.smtp_insecure_skip_verify": "Omitir Verificación de Certificado TLS",
+  "settings.smtp_insecure_skip_verify_warning": "⚠️ No recomendado para producción",
   "settings.smtp_username": "Nombre de usuario SMTP",
   "settings.smtp_username_placeholder": "p.ej., usuario@example.com",
   "settings.smtp_password": "Contraseña SMTP",
@@ -150,6 +160,7 @@
   "settings.smtp_sender_placeholder": "noreply@swissmakers.ch",
   "settings.smtp_tls": "Usar TLS (recomendado)",
   "settings.send_test_email": "Enviar correo de prueba",
+  "settings.send_test_email_hint": "⚠️ Por favor, guarde primero su configuración SMTP antes de enviar un correo de prueba.",
   "settings.fail2ban": "Configuraciones Globales Predeterminadas de Fail2Ban",
   "settings.fail2ban.description": "Estas configuraciones se aplicarán a todos los servidores Fail2Ban habilitados y se almacenarán en su sección [DEFAULT] de jail.local.",
   "settings.enable_bantime_increment": "Habilitar incremento de Bantime",
