Implement version check on load, if the footer has data-update-check=true,it fetches /api/version and sets the version badge. No request is made when update check is disabled.

--- a/internal/locales/de.json
+++ b/internal/locales/de.json
@@ -390,6 +390,9 @@
     "auth.logout": "Abmelden",
     "auth.user_info": "Benutzerinformationen",
     "auth.session_expired": "Ihre Sitzung ist abgelaufen. Bitte melden Sie sich erneut an.",
-    "auth.login_required": "Authentifizierung erforderlich"
+    "auth.login_required": "Authentifizierung erforderlich",
+    "footer.version": "Fail2ban-UI v{version}",
+    "footer.latest": "Aktuell",
+    "footer.update_available": "Update verfügbar: v{version}"
   }
   
