--- a/internal/locales/en.json
+++ b/internal/locales/en.json
@@ -68,6 +68,7 @@
     "logs.overview.per_server_empty": "No per-server data available yet.",
     "logs.overview.recent_filtered_empty": "No stored events match the current filters.",
     "logs.overview.recent_count_label": "Events shown",
+    "logs.overview.load_more": "Load more",
     "logs.overview.country_unknown": "Unknown",
     "logs.overview.last_seen": "Last seen",
     "logs.table.server": "Server",
