Add default chain and default BantimeRndtime settings and make configurable through the settings page

--- a/internal/locales/de.json
+++ b/internal/locales/de.json
@@ -171,6 +171,18 @@
     "settings.default_bantime": "Standard-Bantime",
     "settings.default_bantime.description": "Die Anzahl der Sekunden, für die ein Host gesperrt wird. Zeitformat: 1m = 1 Minute, 1h = 1 Stunde, 1d = 1 Tag, 1w = 1 Woche, 1mo = 1 Monat, 1y = 1 Jahr.",
     "settings.default_bantime_placeholder": "z.B. 48h",
+    "settings.bantime_rndtime": "Bantime Rndtime",
+    "settings.bantime_rndtime.description": "Optional. Maximale Zufallssekunden in der Bantime-Inkrement-Formel (z.B. 2048). Leer lassen für Fail2ban-Standard.",
+    "settings.bantime_rndtime_placeholder": "z.B. 2048",
+    "settings.default_chain": "Standard-Chain",
+    "settings.default_chain.description": "iptables/nftables-Chain für Bans (z.B. INPUT für Host, DOCKER-USER für Docker-Container).",
+    "settings.chain_help_title": "Standard-Chain",
+    "settings.chain_docker_user": "DOCKER-USER",
+    "settings.chain_help_docker_user": "Für Anwendungen in Docker. Bans gelten für alle Container auf dem Host.",
+    "settings.chain_input": "INPUT",
+    "settings.chain_help_input": "Für Anwendungen auf dem Host. Bans gelten nur für das Host-Netzwerk, nicht für Docker-Netze.",
+    "settings.chain_forward": "FORWARD",
+    "settings.chain_help_forward": "Nur bei älteren Docker-Setups, in denen DOCKER-USER nicht verfügbar ist.",
     "settings.banaction": "Banaction",
     "settings.banaction.description": "Standard-Sperraktion (z.B. nftables-multiport, nftables-allports, firewallcmd-rich-rules, etc). Wird verwendet, um action_* Variablen zu definieren.",
     "settings.banaction_allports": "Banaction Allports",
