--- a/internal/locales/de_ch.json
+++ b/internal/locales/de_ch.json
@@ -171,6 +171,18 @@
     "settings.default_bantime": "Standard-Bantime",
     "settings.default_bantime.description": "D Aazahl vo de Sekunde, wo ä Host gsperrt wird. Zytformat: 1m = 1 Minute, 1h = 1 Stund, 1d = 1 Tag, 1w = 1 Woche, 1mo = 1 Monet, 1y = 1 Jahr.",
     "settings.default_bantime_placeholder": "z.B. 48h",
+    "settings.bantime_rndtime": "Bantime Rndtime",
+    "settings.bantime_rndtime.description": "Optionau. Maximali Zufallssekunde i dr Bantime-Inkrement-Formle (z.B. 2048). Läär la füre Fail2ban-Standard.",
+    "settings.bantime_rndtime_placeholder": "z.B. 2048",
+    "settings.default_chain": "Standard-Chain",
+    "settings.default_chain.description": "iptables/nftables-Chain für Bans (z.B. INPUT für Host, DOCKER-USER für Docker-Container).",
+    "settings.chain_help_title": "Standard-Chain",
+    "settings.chain_docker_user": "DOCKER-USER",
+    "settings.chain_help_docker_user": "Für Aawändige i Docker. Bans gäute für alli Container uf em Host.",
+    "settings.chain_input": "INPUT",
+    "settings.chain_help_input": "Für Aawändige uf em Host. Bans gäute nur für s Host-Netz, nid für Docker-Netz.",
+    "settings.chain_forward": "FORWARD",
+    "settings.chain_help_forward": "Nur bi äutere Docker-Setups, wo DOCKER-USER nid verfüegbar isch.",
     "settings.banaction": "Banaction",
     "settings.banaction.description": "Standard-Sperraktione (z.B. nftables-multiport, nftables-allports, firewallcmd-rich-rules, etc). Wird brucht, zum action_* Variablen z definiere.",
     "settings.banaction_allports": "Banaction Allports",
