--- a/internal/locales/en.json
+++ b/internal/locales/en.json
@@ -171,6 +171,18 @@
     "settings.default_bantime": "Default Bantime",
     "settings.default_bantime.description": "The number of seconds that a host is banned. Time format: 1m = 1 minutes, 1h = 1 hour, 1d = 1 day, 1w = 1 week, 1mo = 1 month, 1y = 1 year.",
     "settings.default_bantime_placeholder": "e.g., 48h",
+    "settings.bantime_rndtime": "Bantime Rndtime",
+    "settings.bantime_rndtime.description": "Optional. Max random seconds added in bantime increment formula (e.g. 2048). Leave empty to use Fail2ban default.",
+    "settings.bantime_rndtime_placeholder": "e.g., 2048",
+    "settings.default_chain": "Default Chain",
+    "settings.default_chain.description": "iptables/nftables chain used for banning (e.g. INPUT for host, DOCKER-USER for Docker containers).",
+    "settings.chain_help_title": "Default chain",
+    "settings.chain_docker_user": "DOCKER-USER",
+    "settings.chain_help_docker_user": "Use for apps running in Docker. Bans apply to all containers on the host.",
+    "settings.chain_input": "INPUT",
+    "settings.chain_help_input": "Use for apps on the host. Bans apply to the host network only, not Docker networks.",
+    "settings.chain_forward": "FORWARD",
+    "settings.chain_help_forward": "Only for older Docker setups where DOCKER-USER is not available.",
     "settings.banaction": "Banaction",
     "settings.banaction.description": "Default banning action (e.g. nftables-multiport, nftables-allports, firewallcmd-rich-rules, etc). It is used to define action_* variables.",
     "settings.banaction_allports": "Banaction Allports",
