--- a/internal/locales/es.json
+++ b/internal/locales/es.json
@@ -171,6 +171,18 @@
   "settings.default_bantime": "Bantime por defecto",
   "settings.default_bantime.description": "El número de segundos que un host está bloqueado. Formato de tiempo: 1m = 1 minutos, 1h = 1 horas, 1d = 1 días, 1w = 1 semana, 1mo = 1 mes, 1y = 1 año.",
   "settings.default_bantime_placeholder": "p.ej., 48h",
+  "settings.bantime_rndtime": "Bantime Rndtime",
+  "settings.bantime_rndtime.description": "Opcional. Segundos aleatorios máximos en la fórmula de incremento de bantime (p.ej. 2048). Dejar vacío para usar el valor por defecto de Fail2ban.",
+  "settings.bantime_rndtime_placeholder": "p.ej., 2048",
+  "settings.default_chain": "Chain por defecto",
+  "settings.default_chain.description": "Chain de iptables/nftables para baneos (p.ej. INPUT para host, DOCKER-USER para contenedores Docker).",
+  "settings.chain_help_title": "Chain por defecto",
+  "settings.chain_docker_user": "DOCKER-USER",
+  "settings.chain_help_docker_user": "Para aplicaciones en Docker. Los bans se aplican a todos los contenedores del host.",
+  "settings.chain_input": "INPUT",
+  "settings.chain_help_input": "Para aplicaciones en el host. Los bans solo afectan a la red del host, no a las redes Docker.",
+  "settings.chain_forward": "FORWARD",
+  "settings.chain_help_forward": "Solo en instalaciones Docker antiguas donde DOCKER-USER no existe.",
   "settings.banaction": "Banaction",
   "settings.banaction.description": "Acción de bloqueo por defecto (p.ej. nftables-multiport, nftables-allports, firewallcmd-rich-rules, etc). Se utiliza para definir las variables action_*.",
   "settings.banaction_allports": "Banaction Allports",
