--- a/internal/locales/fr.json
+++ b/internal/locales/fr.json
@@ -171,6 +171,18 @@
   "settings.default_bantime": "Bantime par défaut",
   "settings.default_bantime.description": "Le nombre de secondes pendant lesquelles un hôte est banni. Format de temps : 1m = 1 minutes, 1h = 1 heures, 1d = 1 jours, 1w = 1 semaines, 1mo = 1 mois, 1y = 1 années.",
   "settings.default_bantime_placeholder": "par exemple, 48h",
+  "settings.bantime_rndtime": "Bantime Rndtime",
+  "settings.bantime_rndtime.description": "Optionnel. Nombre maximal de secondes aléatoires dans la formule d'incrément de bantime (ex. 2048). Laisser vide pour utiliser la valeur par défaut de Fail2ban.",
+  "settings.bantime_rndtime_placeholder": "par ex., 2048",
+  "settings.default_chain": "Chain par défaut",
+  "settings.default_chain.description": "Chain iptables/nftables pour les bannissements (ex. INPUT pour l'hôte, DOCKER-USER pour les conteneurs Docker).",
+  "settings.chain_help_title": "Chain par défaut",
+  "settings.chain_docker_user": "DOCKER-USER",
+  "settings.chain_help_docker_user": "Pour les applications dans Docker. Les bans s'appliquent à tous les conteneurs de l'hôte.",
+  "settings.chain_input": "INPUT",
+  "settings.chain_help_input": "Pour les applications sur l'hôte. Les bans ne concernent que le réseau de l'hôte, pas les réseaux Docker.",
+  "settings.chain_forward": "FORWARD",
+  "settings.chain_help_forward": "Uniquement pour les anciennes installations Docker sans DOCKER-USER.",
   "settings.banaction": "Banaction",
   "settings.banaction.description": "Action de bannissement par défaut (par ex. nftables-multiport, nftables-allports, firewallcmd-rich-rules, etc). Elle est utilisée pour définir les variables action_*.",
   "settings.banaction_allports": "Banaction Allports",
