--- a/internal/locales/it.json
+++ b/internal/locales/it.json
@@ -171,6 +171,18 @@
   "settings.default_bantime": "Bantime predefinito",
   "settings.default_bantime.description": "Il numero di secondi per cui un host viene bannato. Formato tempo: 1m = 1 minuti, 1h = 1 ore, 1d = 1 giorni, 1w = 1 settimane, 1mo = 1 mesi, 1y = 1 anni.",
   "settings.default_bantime_placeholder": "es. 48h",
+  "settings.bantime_rndtime": "Bantime Rndtime",
+  "settings.bantime_rndtime.description": "Opzionale. Secondi casuali massimi nella formula di incremento bantime (es. 2048). Lasciare vuoto per usare il default di Fail2ban.",
+  "settings.bantime_rndtime_placeholder": "es. 2048",
+  "settings.default_chain": "Chain predefinita",
+  "settings.default_chain.description": "Chain iptables/nftables per i ban (es. INPUT per l'host, DOCKER-USER per i container Docker).",
+  "settings.chain_help_title": "Chain predefinita",
+  "settings.chain_docker_user": "DOCKER-USER",
+  "settings.chain_help_docker_user": "Per applicazioni in Docker. I ban si applicano a tutti i container sull'host.",
+  "settings.chain_input": "INPUT",
+  "settings.chain_help_input": "Per applicazioni sull'host. I ban riguardano solo la rete dell'host, non le reti Docker.",
+  "settings.chain_forward": "FORWARD",
+  "settings.chain_help_forward": "Solo per installazioni Docker vecchie dove DOCKER-USER non è disponibile.",
   "settings.banaction": "Banaction",
   "settings.banaction.description": "Azione di ban predefinita (es. nftables-multiport, nftables-allports, firewallcmd-rich-rules, ecc). Viene utilizzata per definire le variabili action_*.",
   "settings.banaction_allports": "Banaction Allports",
